--- a/overseas/css/index_sale.css
+++ b/overseas/css/index_sale.css
@@ -30,7 +30,7 @@ body{min-width: 1300px;}
 .wrap-flr{position: relative;background-position: center 0;background-repeat: no-repeat;height: 838px;}
 .wrap-flr .wrap-990{padding-left: 307px;width: 683px;position: relative}
 .flr-hd{color: #fff;font-size: 12px;height: 166px;overflow: hidden}
-.flr-hd h2{display: block;width: 555px; height: 57px;overflow: hidden;font-size: 12px;line-height: 1.4;margin-left: 130px;font-weight: normal;*position:relative}
+.flr-hd h2{display: block;width: 555px; height: 57px;overflow: hidden;font-size: 12px;line-height: 1.4;margin-left: 130px;font-weight: normal;*position:relative;height:125px!important;}
 .flr-hd .icon{background-image: url("../tmp/brand.png");background-repeat: no-repeat;width: 104px;height: 104px;display: block;position: absolute;left: 307px;top:28px;}
 .flr1 .flr-hd .icon{background-position: 0 0}
 .flr2 .flr-hd .icon{background-position: 0 -104px}
@@ -56,9 +56,9 @@ body{min-width: 1300px;}
 .goods-promote{position: absolute;right: 5px;color: #d30000;font-size: 12px;top:38px;}
 .goods-list li:hover img{transform: scale(1.02);-webkit-transform: scale(1.02);-moz-transform: scale(1.02);-o-transform: scale(1.02)}
 /*layer-border*/
-.layer-border{position: absolute;top:0;left: 0;width: 212px;height: 292px;border: 4px solid #666;opacity: 0;transition:opacity .3s;}
+.layer-border{position: absolute;top:0;left: 0;width: 212px;height: 292px;border: 4px solid #666;opacity: 0;transition:opacity .3s;filter:alpha(opacity=0)}
 .layer-border .href-goods-border{position: absolute;width: 100%;height: 100%;top:0;left: 0;background: url(about:blank)}
-.goods-list li:hover .layer-border{opacity: 1}
+.goods-list li:hover .layer-border{opacity: 1;;filter:alpha(opacity=100)}
 .flr1 .layer-border{border-color: #68f6e6;}
 .flr2 .layer-border{border-color: #fccc00;}
 .flr3 .layer-border{border-color: #0fe7fc;}
@@ -102,19 +102,19 @@ body{min-width: 1300px;}
 .float-top .item-5:hover,.float-top .item-5.current{background-color: #73cf54}
 .float-top .item-6:hover,.float-top .item-6.current{background-color: #8323cc}
 /* flr-hd height */
-.wrap-english .flr1 .flr-hd h2{height: 108px;margin-top: 42px;*top:42px;}
-.wrap-english .flr2 .flr-hd h2{height: 76px;margin-top: 49px;*top:49px;}
-.wrap-english .flr3 .flr-hd h2{height: 76px;margin-top: 60px;*top:60px;}
+.wrap-english .flr1 .flr-hd h2{height: 108px;margin-top: 54px;*top:54px;}
+.wrap-english .flr2 .flr-hd h2{height: 82px;margin-top: 42px;*top:42px;}
+.wrap-english .flr3 .flr-hd h2{height: 76px;margin-top: 54px;*top:54px;}
 .wrap-english .flr4 .flr-hd h2{height: 76px;margin-top: 48px;*top:48px;}
 .wrap-english .flr5 .flr-hd h2{height: 90px;margin-top: 42px;*top:42px;}
-.wrap-english .flr6 .flr-hd h2{height: 108px;margin-top: 31px;*top:31px;}
+.wrap-english .flr6 .flr-hd h2{height: 108px;margin-top: 58px;*top:58px;}
 /* wrap-russian */
 .wrap-russian .flr1 .flr-hd h2{height: 108px;margin-top: 42px;*top:42px;}
-.wrap-russian .flr2 .flr-hd h2{height: 88px;margin-top: 40px;*top:40px;}
-.wrap-russian .flr3 .flr-hd h2{height: 76px;margin-top: 55px;*top:55px;}
-.wrap-russian .flr4 .flr-hd h2{height: 92px;margin-top: 46px;*top:46px;}
+.wrap-russian .flr2 .flr-hd h2{height: 88px;margin-top: 35px;*top:35px;}
+.wrap-russian .flr3 .flr-hd h2{height: 76px;margin-top: 43px;*top:43px;}
+.wrap-russian .flr4 .flr-hd h2{height: 92px;margin-top: 40px;*top:40px;}
 .wrap-russian .flr5 .flr-hd h2{height: 90px;margin-top: 44px;*top:44px;}
-.wrap-russian .flr6 .flr-hd h2{height: 125px;margin-top: 28px;*top:28px;}
+.wrap-russian .flr6 .flr-hd h2{height: 125px;margin-top: 60px;*top:60px;}
 /* m-body */
 .m-body .float-top .item-1:hover,.m-body .float-top .item-3:hover,.m-body .float-top .item-5:hover{background-color: #323232}
 .m-body .float-top .item-2:hover,.m-body .float-top .item-4:hover,.m-body .float-top .item-6:hover{background-color: #242424}
