--- a/overseas/newbuyer/newbuyerzone/index.css
+++ b/overseas/newbuyer/newbuyerzone/index.css
@@ -23,6 +23,7 @@ body{min-width: 1300px;background-color: #fff}
 :root .wrap-hd .map-icon{filter:none;}
 .wrap-hd .map a:hover .map-icon,.wrap-hd .map a.current .map-icon{opacity: 1;filter:alpha(opacity=100);width: 143px;height: 4px;}
 .m-body .float-top .map a:hover .map-icon{opacity: 0;filter:alpha(opacity=0);}
+.m-body .float-top .map a.current .map-icon{opacity: 1;filter:alpha(opacity=100);}
 
 .wrap-hd-icon{position: absolute;width: 190px;height: 132px;background-color: #9e8876;left: 50%;margin-left: -600px;top:0;text-align: center;z-index: 11}
 .wrap-hd-icon .icon{background-image: url(sprite/banner_icon.png);width: 75px;height: 78px;margin:14px auto 0;display: block}
