--- a/overseas/newbuyer/newbuyerzone/index.css
+++ b/overseas/newbuyer/newbuyerzone/index.css
@@ -21,7 +21,7 @@ body{min-width: 1300px;background-color: #fff}
 .wrap-hd .map a{font-weight: bold;font-size: 18px;display: inline-block;width: 248px;text-align: center;line-height: 75px;height: 75px;color: #fff;position: relative}
 .wrap-hd .map-icon{width: 143px;height: 4px;position: absolute;bottom:0;left: 52px;background-color: #fff;opacity: 0;transition:all .5s;filter:alpha(opacity=0);/*width: 0*/height: 0}
 :root .wrap-hd .map-icon{filter:none;}
-.wrap-hd .map a:hover .map-icon,.wrap-hd .map a.current .map-icon{opacity: 1;filter:alpha(opacity=100);width: 143px;height: 4px;}
+.wrap-hd .map a:hover .map-icon,.wrap-hd .map a.current .map-icon{opacity: 1;filter:alpha(opacity=100);height: 4px;}
 .m-body .float-top .map a:hover .map-icon{opacity: 0;filter:alpha(opacity=0);}
 .m-body .float-top .map a.current .map-icon{opacity: 1;filter:alpha(opacity=100);}
 
@@ -29,7 +29,7 @@ body{min-width: 1300px;background-color: #fff}
 .wrap-hd-icon .icon{background-image: url(sprite/banner_icon.png);width: 75px;height: 78px;margin:14px auto 0;display: block}
 .wrap-hd-icon-text{line-height: 40px;font-size: 20px;font-weight: lighter;color: #fff;}
 /* wrap-bd */
-.wrap-bd{margin-bottom: 114px;}
+.wrap-bd{margin-bottom: 20px;}
 /* flr1 */
 .flr1 .wrap-flr-summary{background-color: #ffcf66;height: 445px;padding-top: 33px;text-align: center;background-position: center bottom;background-repeat: no-repeat;background-image: url(sprite/flr1_bg_24.png)}
 .wrap-flr .wrap-flr-detail{background-position: center bottom;background-repeat: no-repeat}
@@ -44,7 +44,7 @@ body{min-width: 1300px;background-color: #fff}
 .flr1 .wrap-text-h1{color: #5f4027;font-weight: bold;font-size: 85px;line-height: 77px;height: 77px;}
 .flr1 .wrap-flr-summary .wrap-text-h2{color:#5f4027;font-size: 52px;line-height: 1.2;line-height: 46px;height: 46px;margin-bottom: 15px;}
 .flr1 .wrap-flr-summary .wrap-text-h3{color:#fff;font-size: 20px;}
-.flr1 .wrap-flr-summary .wrap-text-h3 span{padding: 0 10px;background-color: #fe8900;line-height: 28px;display: inline-block;margin-bottom: 10px;}
+.flr1 .wrap-flr-summary .wrap-text-h3 span{padding: 0 13px;background-color: #fe8900;line-height: 28px;display: inline-block;margin-bottom: 10px;}
 .wrap-flr .wrap-flr-summary .wrap-text-p{font-size: 16px;line-height: 30px;width: 690px;margin: 0 auto;display: block}
 .flr1 .wrap-flr-summary .wrap-text-p{color: #9a4511;}
 .flr1 .wrap-flr-detail .wrap-text-h2{color: #333333;font-size: 24px;font-weight: bold;line-height: 51px;height: 51px;}
@@ -55,25 +55,25 @@ body{min-width: 1300px;background-color: #fff}
 .flr1 .wrap-flr-detail-2 .wrap-text-ct,.flr1 .wrap-flr-detail-4 .wrap-text-ct{padding-left: 190px;padding-top: 145px;width:392px;height: 209px;}
 .flr1 .wrap-flr-detail-3 .wrap-text-ct{padding-top: 135px;width: 390px;}
 .flr1 .wrap-flr-detail-4 .wrap-text-ct{width: 400px}
-.flr1 .wrap-flr-detail .wrap-text-ul{color: #999999;font-size: 17px;line-height: 44px;display: block;list-style: disc;padding-left: 10px;}
+.flr1 .wrap-flr-detail .wrap-text-ul{color: #897f68;font-size: 17px;line-height: 44px;display: block;list-style: disc;padding-left: 10px;}
 /* flr2 */
 .flr2{background-color: #fff;background-image: url(sprite/flr2.png);height: 1788px;background-position: center bottom;background-repeat: no-repeat;}
 .flr2 .wrap-flr-summary{height: 306px;}
-.flr2 .wrap-flr-summary .wrap-hd-ct{padding-top: 117px;text-align: center;margin-bottom: 6px;}
-.flr2 .wrap-flr-summary .wrap-text-h1{color: #4d4545;line-height: 62px;font-size: 50px;font-weight: bold}
-.flr2 .wrap-flr-summary .wrap-text-p{line-height: 30px;width: 414px;display: block;margin: 0 auto;font-size: 20px;}
+.flr2 .wrap-flr-summary .wrap-hd-ct{padding-top: 110px;text-align: center;margin-bottom: 6px;}
+.flr2 .wrap-flr-summary .wrap-text-h1{color: #5f4027;line-height: 62px;font-size: 50px;font-weight: bold;margin-bottom: 7px;}
+.flr2 .wrap-flr-summary .wrap-text-p{line-height: 30px;width: 414px;display: block;margin: 0 auto;font-size: 20px;color: #857676}
 .flr2 .wrap-flr-detail{position: relative;width: 1200px;margin: 0 auto;}
 .flr2 .wrap-flr-detail-ct{position: absolute;}
 .flr2 .wrap-detail-ct-1{left: 190px;top:37px;width: 455px;height: 204px;}
 .flr2 .wrap-detail-ct-2{left: 611px;top:429px;width: 455px;height: 204px;top:365px;}
 .flr2 .wrap-detail-ct-3{left: 190px;top:720px;width: 447px;height: 330px;top:656px;}
 .flr2 .wrap-detail-ct-4{left: 611px;top:1141px;width: 435px;height: 267px;top:1077px;}
-.flr2 .wrap-text-h2{line-height: 48px;color: #333333;font-size: 24px;font-weight: bold;height: 48px;margin-bottom: 10px}
-.icon-no{display: inline-block;width: 26px;height: 26px;border-radius: 26px;background-color: #4d4545;line-height: 26px;color: #fff;font-size: 18px;text-align: center;font-style: normal;vertical-align: middle;margin-right: 6px;}
+.flr2 .wrap-text-h2{line-height: 48px;color: #5f4027;font-size: 24px;font-weight: bold;height: 48px;margin-bottom: 10px}
+.icon-no{display: inline-block;width: 26px;height: 26px;border-radius: 26px;background-color: #5f4027;line-height: 26px;color: #fff;font-size: 18px;text-align: center;font-style: normal;vertical-align: middle;margin-right: 6px;}
 .wrap-text-h2-span{vertical-align: middle}
-.flr2 .wrap-text-p{display: block;color: #999999;font-size: 17px;line-height: 40px;}
+.flr2 .wrap-text-p{display: block;color: #897f68;font-size: 17px;line-height: 40px;}
 .flr2 .wrap-flr-detail .wrap-text-p{padding-left: 32px;}
-.flr2 .wrap-text-ul{padding-left: 32px;display: block;color: #999999;font-size: 17px;line-height: 40px;list-style: disc;padding-left: 20px;}
+.flr2 .wrap-text-ul{padding-left: 32px;display: block;color: #897f68;font-size: 17px;line-height: 32px;list-style: disc;padding-left: 20px;}
 .flr2 .wrap-detail-ct-4 .wrap-text-ul{width: 340px;}
 .flr2 .wrap-detail-ct-2 .wrap-text-ul{width: 340px;}
 .flr2 .wrap-detail-ct-1 .wrap-text-p{width: 400px;}
@@ -82,7 +82,7 @@ body{min-width: 1300px;background-color: #fff}
 .flr3 .wrap-text-h1{line-height: 132px;height: 132px;color: #5f4027;font-size: 50px;text-align: center}
 .wrap-flr3-section{background-color: #fffaee;margin-bottom: 30px;padding-bottom: 37px}
 .wrap-flr3-section .wrap-text-h2{height: 93px;border-bottom: 1px solid #fff;line-height: 93px;color: #5f4027;font-size: 24px;font-weight: bold;padding-left: 50px;margin-bottom: 20px;}
-.wrap-flr3-section .wrap-text-p{line-height: 41px;padding-left: 50px;color: #5f4027;font-size: 18px;}
+.wrap-flr3-section .wrap-text-p{line-height: 34px;padding-left: 50px;color: #5f4027;font-size: 18px;}
 .wrap-flr3-section .wrap-flr3-two-cols{margin-top: 18px;margin-left: 50px;margin-right: -93px;}
 .wrap-flr3-two-cols .wrap-flr3-left{float: left;width: 508px;margin-right: 93px;color: #857474}
 .wrap-flr3-two-cols .icon-no{background-color: #897f68;margin-right: 12px;}
@@ -90,7 +90,7 @@ body{min-width: 1300px;background-color: #fff}
 .wrap-flr3-section .wrap-text-h3{line-height: 41px;color: #5f4027;font-size: 18px;margin: 22px 0 25px;}
 .wrap-flr3-section-2 .wrap-text-h3{margin-top: 0;}
 .wrap-flr3-section-2 .wrap-text-ul .wrap-text-p{padding-left: 38px;color: #897f68;font-weight: lighter;font-size: 17px;}
-.wrap-flr3-section-2 .wrap-text-ul li{margin-bottom: 25px;}
+.wrap-flr3-section-2 .wrap-text-ul li{margin-bottom: 25px;line-height: 34px;}
 .wrap-flr3-section-3 .wrap-text-h2{margin-bottom: 0}
 .wrap-flr3-section-3 .wrap-text-p{color: #897f68;font-size: 17px;}
 /* wrap-ft */
@@ -110,3 +110,23 @@ body{min-width: 1300px;background-color: #fff}
 .float-top .float-hd-icon{position: absolute;width: 272px;height: 100%;background-color: #9e8876;left: 0;bottom:0;}
 .float-top .icon{background-image: url(sprite/banner_icon_small.png);width: 64px;height: 64px;margin:6px 7px 0 20px;display: inline-block}
 .float-hd-icon-text{line-height: 75px;font-size: 20px;font-weight: lighter;color: #fff;vertical-align: middle}
+
+/* color */
+.flr1 .wrap-flr-detail .wrap-text-h2{color:#5f4027}
+.flr1 .wrap-flr-detail .wrap-text-p{color:#897f68}
+/* russian */
+.wrap-russian .wrap-hd .map a{width: auto;padding: 0 50px;}
+.wrap-russian .wrap-hd .item-1 .map-icon{left: 33px}
+.wrap-russian .wrap-hd .item-2 .map-icon{width: 380px;left: 43px;}
+.wrap-russian .wrap-hd .item-3 .map-icon{left: 44px;width: 200px;}
+.wrap-russian .float-top .map a{width: auto;padding: 0 19px;}
+.wrap-russian .float-top .map .item-2{margin-right: 20px;}
+.wrap-russian .float-top .map .item-1 .map-icon{width: 133px;left: 0;}
+.wrap-russian .float-top .map .item-2 .map-icon{width: 360px;left: 0;}
+.wrap-russian .float-top .map .item-3 .map-icon{left: 11px;width: 181px;}
+.wrap-russian .flr1 .wrap-flr-summary .wrap-text-p{width: 900px}
+.wrap-russian .flr1 .wrap-flr-detail-2 .wrap-text-p{width: 520px}
+.wrap-russian .flr2 .wrap-flr-summary .wrap-text-p{width: 520px;}
+.wrap-russian .flr2 .wrap-detail-ct-1 .wrap-text-p{width: 440px;}
+.wrap-russian .flr2 .wrap-detail-ct-4{width: 700px;top:1114px}
+.wrap-russian .flr2 .wrap-detail-ct-4 .wrap-text-ul{width: 444px;}
