--- a/overseas/newbuyer/newbuyerzone/index.css
+++ b/overseas/newbuyer/newbuyerzone/index.css
@@ -29,7 +29,7 @@ body{min-width: 1300px;background-color: #fff}
 .wrap-hd-icon .icon{background-image: url(sprite/banner_icon.png);width: 75px;height: 78px;margin:14px auto 0;display: block}
 .wrap-hd-icon-text{line-height: 40px;font-size: 20px;font-weight: lighter;color: #fff;}
 /* wrap-bd */
-.wrap-bd{margin-bottom: 20px;}
+.wrap-bd{margin-bottom: 20px;overflow: hidden;width: 100%;}
 /* flr1 */
 .flr1 .wrap-flr-summary{background-color: #ffcf66;height: 445px;padding-top: 33px;text-align: center;background-position: center bottom;background-repeat: no-repeat;background-image: url(sprite/flr1_bg_24.png)}
 .wrap-flr .wrap-flr-detail{background-position: center bottom;background-repeat: no-repeat}
