--- a/overseas/newbuyer/newbuyerzone/index.css
+++ b/overseas/newbuyer/newbuyerzone/index.css
@@ -95,12 +95,12 @@ body{min-width: 1300px;background-color: #fff}
 .wrap-flr3-section-3 .wrap-text-p{color: #897f68;font-size: 17px;}
 /* wrap-ft */
 .wrap-flr .wrap-1200{position: relative;overflow: hidden}
-.wrap-ft .wrap-ad{margin-right: -30px;font-size: 0}
+.wrap-ft .wrap-ad{margin-right: -30px;font-size: 0;position: relative;*zoom:1;*letter-spacing:-1px;}
 .wrap-ft .wrap-ad a{display: inline-block;width: 585px;margin-right: 30px;}
 /* float-top */
 .float-top{width: 100%;height: 75px;background-color: #826d5c;}
 .float-top .wrap-1200{position: relative;height: 100%;font-size: 0}
-.float-top .map{margin-left: 272px;font-weight: bold;color: #fff;line-height: 75px;position: relative;height: 75px}
+.float-top .map{margin-left: 272px;font-weight: bold;color: #fff;line-height: 75px;position: relative;height: 75px;*letter-spacing:-1px;}
 .float-top .map a{color: #fff;width: 209px;display: inline-block;height: 100%;text-align: center;font-size: 16px;position: relative}
 .float-top .map-icon{width: 143px;height: 4px;position: absolute;bottom:0;left: 34px;background-color: #fff;opacity: 0;transition:all .5s;filter:alpha(opacity=0);/*width: 0*/height: 0}
 :root .float-top .map-icon{filter:none;}
