--- a/overseas/newbuyer/newbuyerzone/index.css
+++ b/overseas/newbuyer/newbuyerzone/index.css
@@ -130,3 +130,4 @@ body{min-width: 1300px;background-color: #fff}
 .wrap-russian .flr2 .wrap-detail-ct-1 .wrap-text-p{width: 440px;}
 .wrap-russian .flr2 .wrap-detail-ct-4{width: 700px;top:1114px}
 .wrap-russian .flr2 .wrap-detail-ct-4 .wrap-text-ul{width: 444px;}
+.wrap-russian .flr1 .wrap-flr-detail-4 .wrap-text-ct{height: 220px;}
