--- a/overseas/newbuyer/newbuyerzone/index.css
+++ b/overseas/newbuyer/newbuyerzone/index.css
@@ -140,3 +140,4 @@ body{min-width: 1300px;background-color: #fff}
 .float-hd-icon-text,.wrap-hd-icon-text{color: #a7998f;  line-height: 75px;font-size: 20px;font-weight: lighter;vertical-align: middle}
 .float-top .icon,.wrap-hd-icon .icon{background-image: url(sprite/banner_icon_small1.png);width: 61px;height: 64px;margin-right: 10px;}
 .wrap-hd-icon .icon{display: inline-block;vertical-align: middle;margin: 6px 6px 0 20px;}
+.wrap-russian .wrap-hd .map a{padding: 0 45px;}
