--- a/overseas/hardware/index.css
+++ b/overseas/hardware/index.css
@@ -29,7 +29,7 @@ body{min-width: 1300px;background-color: #f0f0f0}
 .img-border-2{top:292px;}
 .img-border-3{top:438px;}
 .goods-detail{margin: 27px 0 0 26px;position: relative;}
-.goods-name{font-size: 22px;font-family: Times New Roman;line-height: 48px;height: 48px;}
+.goods-name{font-size: 22px;font-family: Times New Roman;line-height: 48px;height: 48px;overflow: hidden}
 .goods-name a{color: #333333}
 .goods-info{margin-bottom: 17px;}
 .goods-info ol{padding-left: 15px;}
@@ -45,3 +45,5 @@ body{min-width: 1300px;background-color: #f0f0f0}
 .goods-li:hover .layer-border{border-color: #df0414;}
 .goods-li:hover .goods-buy{background-color: #df0414}
 .href-layer{display: block;width: 100%;height: 100%;background: url(about:blank)}
+/* wrap-russian */
+.wrap-russian .wrap-hd{background-image: url(img/hardware_hd_r.jpg)}
