--- a/overseas/hardware/index.css
+++ b/overseas/hardware/index.css
@@ -28,7 +28,7 @@ body{min-width: 1300px;background-color: #f0f0f0}
 .img-border-1{top:146px;}
 .img-border-2{top:292px;}
 .img-border-3{top:438px;}
-.goods-detail{margin: 27px 0 0 26px;position: relative;}
+.goods-detail{margin: 27px 26px 0 26px;position: relative;}
 .goods-name{font-size: 22px;font-family: Times New Roman;line-height: 48px;height: 48px;overflow: hidden}
 .goods-name a{color: #333333}
 .goods-info{margin-bottom: 17px;}
