--- a/overseas/fashion/fashion/index.css
+++ b/overseas/fashion/fashion/index.css
@@ -11,10 +11,10 @@ body{min-width: 1300px;background-color: #fff}
 /* for foot bug */
 .fd txt,.fd text{height: 42px;overflow: hidden;margin-left: 0;left: 18px;}
 .footer .fd{position: relative}
-.header-fix{z-index: 1}
+.header-fix{z-index: 3}
 .footer .fd .ipt-text{height: 14px;}
 /* wrap-flr */
-.wrap-flr{width: 100%;position: relative;z-index: 1;}
+.wrap-flr{width: 100%;position: relative;z-index: 1;clear: both}
 /* wrap-hd */
 .wrap-hd{position: relative;margin-bottom: 18px;background-image: url(http://img14.360buyimg.com/cms/jfs/t1312/313/955395007/23489/8203adf1/55adeb0bN0a01ea98.jpg);background-position: center 0;width: 100%;height: 217px;}
 /* wrap-bd */
@@ -22,13 +22,14 @@ body{min-width: 1300px;background-color: #fff}
 .layer{position: absolute;width: 100%;height: 100%;background: rgba(0,0,0,.3);opacity: 0;filter:alpha(opacity=0);transition: all .5s;top:0;left: 0;background: #000\9;filter:alpha(opacity=30)\9;}
 :root .layer{filter:none;}
 /* flr-hd */
-.flr-hd{width: 100%;height: 128px;overflow: hidden;line-height: 128px;font-size: 35px;color: #000;text-align: center;}
+.flr-hd{width: 100%;height: 128px;overflow: hidden;line-height: 128px;font-size: 35px;color: #000;text-align: center;margin-bottom: 7px;}
 /* flr-bd */
 .flr-bd{position: relative;}
 .flr-bd .wrap-1200{position: relative;*zoom:1;overflow: hidden}
 .goods-list{margin-right: -30px;}
 .goods-list li{float: left;position: relative;}
 /* flr1 */
+.flr{margin-bottom: -10px;}
 .flr1 .goods-list{*padding-bottom:30px;}
 .flr1 .goods-list li{width: 583px;height: 428px;border: 1px solid #eeeeee;overflow: hidden;margin: 0 30px 30px 0;}
 .flr1 .goods-img-h{position: absolute;left: 97px;top:268px;width: 390px;height: 140px;}
@@ -84,7 +85,8 @@ body{min-width: 1300px;background-color: #fff}
 .flr3 .item-6 .goods-img{height: 220px;}
 .flr3 .item-7 .goods-img{height: 220px;}
 /* flr4 */
-.flr4 .goods-list{margin-bottom: 16px;}
+.flr4{margin-bottom: -30px;}
+.flr4 .goods-list{margin-bottom: 16px;*padding-bottom:30px;}
 .flr4 .goods-list li{width: 378px;height: 378px;border: 1px solid #eee;margin: 0 30px 30px 0;position: relative}
 .flr4 .img-text{color: #fff;font-size: 22px;font-weight: bold;top:345px;position: absolute;width: 100%;left: 0;text-align: center;transition: all .5s ease-in;}
 .flr4 .goods-list .img-hover{transition: all .5s ease-in;opacity: 0;filter:alpha(opacity=0);top:189px;left: 189px;width: 0;height: 0;position: absolute;width: 220px;height: 220px;left: 78px;top:50px;}
@@ -93,19 +95,22 @@ body{min-width: 1300px;background-color: #fff}
 .flr4 .goods-list li:hover .layer{opacity: .3\9;filter:alpha(opacity=30);}
 .flr4 .goods-list li:hover .img-text{opacity: 0;filter:alpha(opacity=0);top:300px;}
 /* flr5 */
+.flr5{margin-bottom: -30px;}
+.flr5 .goods-list{*padding-bottom:30px;}
 .flr5 .goods-list li{width: 380px;height: 485px;margin:0 30px 30px 0;}
 .flr5 .goods-img{width: 378px;height: 378px;border: 1px solid #eee;overflow: hidden;position: relative;}
 .flr5 .goods-img img{transition: all .5s;}
 .flr5 .goods-detail{position: relative}
-.flr5 .goods-name{line-height: 50px;font-size: 22px;font-weight: bold;overflow: hidden;height: 50px;}
+.flr5 .goods-name{line-height: 50px;font-size: 22px;font-weight: bold;overflow: hidden;height: 47px;margin-top: 3px;}
 .flr5 .goods-name a{height: 50px;display: block;overflow: hidden;text-overflow: ellipsis;width: 100%;color: #333;}
 .flr5 .goods-name-line{display: block;background-color: #df0616;width: 50px;height: 2px;margin-bottom: 11px;}
 .flr5 .goods-info{color: #666;line-height: 19px;}
 .flr5 .goods-list li:hover .goods-img img{transform: scale(1.1);-o-transform: scale(1.1);-moz-transform: scale(1.1)}
 /* flr6 */
 .flr6 .goods-list li{width: 175px;height: 230px;margin: 0 30px 30px 0;}
-.flr6 .goods-img{width: 100%;height: 175px;}
+.flr6 .goods-img{width: 100%;height: 175px;position: relative;overflow: hidden;border: 1px solid #fff;}
 .flr6 .goods-img img{transition: all .5s;}
 .flr6 .goods-list li:hover img{transform: scale(1.05);-o-transform: scale(1.05);-moz-transform: scale(1.05)}
+.flr6 .goods-list li:hover .goods-img{border: 1px solid #eee;}
 .flr6 .category{line-height: 55px;height: 55px;font-size: 14px;color: #333;font-weight: bold;text-align: center;width: 100%}
 .flr6 .category a{color: #333;}
