--- a/overseas/fashion/fashion/index.css
+++ b/overseas/fashion/fashion/index.css
@@ -16,7 +16,7 @@ body{min-width: 1300px;background-color: #fff}
 /* wrap-flr */
 .wrap-flr{width: 100%;position: relative;z-index: 1;clear: both}
 /* wrap-hd */
-.wrap-hd{position: relative;margin-bottom: 18px;background-image: url(http://img14.360buyimg.com/cms/jfs/t1312/313/955395007/23489/8203adf1/55adeb0bN0a01ea98.jpg);background-position: center 0;width: 100%;height: 217px;}
+.wrap-hd{position: relative;margin-bottom: 18px;background-image: url(http://img11.360buyimg.com/cms/jfs/t1621/291/890729875/25155/b1a7dad8/55b0c4f2Na0586069.jpg);background-position: center 0;width: 100%;height: 217px;}
 /* wrap-bd */
 .wrap-bd{position: relative;}
 .layer{position: absolute;width: 100%;height: 100%;background: rgba(0,0,0,.3);opacity: 0;filter:alpha(opacity=0);transition: all .5s;top:0;left: 0;background: #000\9;filter:alpha(opacity=30)\9;}
@@ -34,7 +34,7 @@ body{min-width: 1300px;background-color: #fff}
 .flr1 .goods-list li{width: 583px;height: 428px;border: 1px solid #eeeeee;overflow: hidden;margin: 0 30px 30px 0;}
 .flr1 .goods-img-h{position: absolute;left: 97px;top:268px;width: 390px;height: 140px;}
 .flr1 .goods-list .goods-img{transition: all .5s .2s;}
-.flr1 .goods-list li:hover .goods-img{transform: scale(1.1);-o-transform: scale(1.1);-moz-transform: scale(1.1)}
+.flr1 .goods-list li:hover .goods-img{transform: scale(1.1);-o-transform: scale(1.1);-moz-transform: scale(1.1);-webkit-transform: scale(1.1)}
 /* flr2 */
 .wrap-sfq li{width: 260px;height: 510px;overflow: hidden;transition:all .2s .2s;}
 .wrap-sfq .goods-list a{background-position: center 0;transition:all .2s .2s;display: block;position: relative;width: 100%;height: 100%;box-shadow:inset rgba(0,0,0,.3) -5px 0px 2px -2px;-o-box-shadow: inset rgba(0,0,0,.3) -5px 0px 2px -2px;-moz-box-shadow: inset rgba(0,0,0,.3) -5px 0px 2px -2px;}
@@ -105,12 +105,14 @@ body{min-width: 1300px;background-color: #fff}
 .flr5 .goods-name a{height: 50px;display: block;overflow: hidden;text-overflow: ellipsis;width: 100%;color: #333;}
 .flr5 .goods-name-line{display: block;background-color: #df0616;width: 50px;height: 2px;margin-bottom: 11px;}
 .flr5 .goods-info{color: #666;line-height: 19px;}
-.flr5 .goods-list li:hover .goods-img img{transform: scale(1.1);-o-transform: scale(1.1);-moz-transform: scale(1.1)}
+.flr5 .goods-list li:hover .goods-img img{transform: scale(1.1);-o-transform: scale(1.1);-moz-transform: scale(1.1);-webkit-transform: scale(1.1)}
 /* flr6 */
 .flr6 .goods-list li{width: 175px;height: 230px;margin: 0 30px 30px 0;}
 .flr6 .goods-img{width: 100%;height: 175px;position: relative;overflow: hidden;border: 1px solid #fff;}
 .flr6 .goods-img img{transition: all .5s;}
-.flr6 .goods-list li:hover img{transform: scale(1.05);-o-transform: scale(1.05);-moz-transform: scale(1.05)}
+.flr6 .goods-list li:hover img{transform: scale(1.05);-o-transform: scale(1.05);-moz-transform: scale(1.05);-webkit-transform: scale(1.1)}
 .flr6 .goods-list li:hover .goods-img{border: 1px solid #eee;}
 .flr6 .category{line-height: 55px;height: 55px;font-size: 14px;color: #333;font-weight: bold;text-align: center;width: 100%}
 .flr6 .category a{color: #333;}
+/* wrap-russian */
+.wrap-russian .wrap-hd{background-image: url(http://img12.360buyimg.com/cms/jfs/t1297/105/995057300/28605/cad7181/55b0c4f2N680c8737.jpg)}
