--- a/overseas/xiaomi/content.css
+++ b/overseas/xiaomi/content.css
@@ -1,6 +1,12 @@
 body{min-width:1300px;}
 .w1000{width: 1000px;position: relative;margin-left: -500px;left: 50%;}
 .hyperchannel{margin-top: 0;}
+.clearfloat{ zoom: 1 }
+.clearfloat:after{ display: block; clear: both; content: ""; visibility: hidden; height: 0 }
+
+.logo-banner{width:100%;height:80px;background-color:#F6F6F6;}
+.wrap-1200{position:relative; width:1200px; height:100%;margin:0 auto;}
+.mi-floor a:hover{text-decoration: underline;}
 
 .mi-header{background: url(image/mi-head-img.jpg) no-repeat center center;width: 100%;height: 540px;position: relative;}
 .mi-header .m-title{position: absolute;left: 50%;}
@@ -23,14 +29,14 @@ body{min-width:1300px;}
 .floor-5 .bh{height: 50px;background-position: 0 -310px;}
 
 .floor-1 .bd{height: 968px;}
-.modG-1{width: 1012px;height: 492px;}
-.modG-1 li{float: left;width: 325px;height: 480px;margin-right: 12px;margin-bottom: 12px;-webkit-transition: all 0.2s linear;transition: all 0.2s linear;}
+.modG-1{width: 1012px;height: 482px;}
+.modG-1 li{float: left;width: 325px;height: 470px;margin-right: 12px;margin-bottom: 12px;-webkit-transition: all 0.2s linear;transition: all 0.2s linear;}
 .modG-1 .img{display: block;width: 325px;height: 325px;position: relative;}
 .modG-1 .benefit{background-color: #DF0616;color: #ffffff;font-size: 16px;position: absolute;bottom: -37px;width: 325px;height: 37px;line-height: 37px;text-align: center;overflow: hidden;opacity: 0;z-index: 2;left: 0;filter: alpha(opacity=0)\9;}
 .modG-1 .benefit i{font-size: 24px;}
-.modG-1 .info{background-color: #ffffff;position: relative;z-index: 5;height: 135px;padding: 10px 10px 10px 15px;}
-.modG-1 .title{font-size: 14px;line-height: 18px;height: 36px;overflow: hidden;}
-.modG-1 .price{margin-top: 30px;}
+.modG-1 .info{background-color: #ffffff;position: relative;z-index: 5;height: 125px;padding: 10px 10px 10px 15px;}
+.modG-1 .title{font-size: 14px;line-height: 18px;height: 36px;overflow: hidden;display: block;}
+.modG-1 .price{margin-top: 20px;}
 .price{height: 36px;}
 .price .new-p{font-size: 30px;font-weight: bold;color: #DF0616;}
 .price .old-p{font-size: 16px;color: #999999;text-decoration: line-through;padding-left: 5px;}
@@ -41,7 +47,8 @@ body{min-width:1300px;}
 .item-active{-webkit-box-shadow: 0 15px 30px rgba(0,0,0,0.1);box-shadow: 0 15px 30px rgba(0,0,0,0.1);-webkit-transform: translate3d(0, -2px, 0);transform: translate3d(0, -2px, 0)}
 
 .modG-2{width: 1000px;height: 325px;background-color: #ffffff;position: relative;-webkit-transition: all 0.2s linear;transition: all 0.2s linear;}
-.modG-2 .img{width: 325px;height: 325px;float: left;}
+.modG-2 .img{width: 325px;height: 325px;float: left;position: relative;}
+.modG-2 .img i{display: block;}
 .modG-2 .info{padding: 15px;width: 645px;height: 295px;float: left;}
 .modG-2 .title{font-size: 28px;height: 30px;margin-top: 35px;}
 .modG-2 .desc{font-size: 14px;}
@@ -66,20 +73,25 @@ body{min-width:1300px;}
 
 .modG-3{width: 1012px;height: 335px;}
 .modG-3 li{width: 494px;height: 330px;background-color: #ffffff;position: relative;margin-right: 12px;float: left;-webkit-transition: all 0.2s linear;transition: all 0.2s linear;}
-.modG-3 .img{width: 270px;height: 330px;float: left;}
+.modG-3 .img{width: 270px;height: 330px;float: left;display: block;}
 .modG-3 .info{padding: 10px;width: 204px;height: 310px;float: left;}
 .modG-3 .title{font-size: 28px;height: 30px;margin-top: 35px;}
-.modG-3 .desc{font-size: 14px;}
+.modG-3 .desc{font-size: 14px;display: block;height: 70px;overflow: hidden;}
 .modG-3 .review{background-color: #DF0616;font-size: 14px;color: #ffffff;width: 62px;height: 22px;line-height: 22px;padding-left: 8px;margin-top: 10px;}
 .modG-3 .price{margin-top: 60px;}
 .floor-3 .modG-1{height: 455px;}
 
-.floor-3 .modG-1 li,.floor-4 .modG-1 li{position: relative;height: 445px;}
-.floor-3 .modG-1 .info,.floor-4 .modG-1 .info{height: 100px;}
+.floor-3 .modG-1 li,.floor-4 .modG-1 li{position: relative;height: 440px;}
+.floor-3 .modG-1 .info,.floor-4 .modG-1 .info{height: 95px;}
 
-.floor-4 .modG-1{height: 910px;}
+.floor-4 .bd,.floor-4 .modG-1{height: 905px;}
+.floor-4 .bd .yao{position: absolute;width: 325px;height: 440px;right: 0;bottom: 13px;}
 .floor-5 .ad-1{display: block;width: 1000px;height: 95px;margin-bottom: 20px;}
 .floor-5 .ad-2{display: block;width: 1000px;height: 310px;margin-bottom: 50px;}
+
+.wrap-ft{width:100%;margin-top:80px;background-color: #F6F6F6;}
+.wrap-ft .mod-tips{height:139px;background:url(http://img11.360buyimg.com/cms/jfs/t1390/305/1355716670/16489/55f7c322/55c5ad59N3d78a2c9.jpg) no-repeat 0 0;}
+.wrap-ft .learn-more{display:none;width:100%;height:76px;line-height: 76px;font-size: 14px;text-decoration: underline;text-align: center;display:block;}
 
 @-webkit-keyframes slideInT-1{
   0%{opacity:0;top: -10px;}
