--- a/overseas/xiaomi/content.css
+++ b/overseas/xiaomi/content.css
@@ -43,12 +43,12 @@ body{min-width:1300px;}
 .coupon{font-size: 14px;position: relative;height: 22px;width: 315px;}
 .coupon a{display: block;position: absolute;left: 210px;width: 17px;height: 17px;top: 1px;background-image: url(image/help-icon.jpg);}
 .coupon .c-code{display: block;position: absolute;background-image: url(image/coupon-rule.png);width: 70px;height: 22px;text-align: center;line-height: 22px;font-size: 14px;left: 135px;top: -2px;}
-.coupon img{position: absolute;right: -7px;bottom: 23px;opacity: 0;filter: alpha(opacity=0)\9;}
+.coupon img{position: absolute;right: -7px;bottom: 23px;display: none;}
 .item-active{-webkit-box-shadow: 0 15px 30px rgba(0,0,0,0.1);box-shadow: 0 15px 30px rgba(0,0,0,0.1);-webkit-transform: translate3d(0, -2px, 0);transform: translate3d(0, -2px, 0)}
 
 .modG-2{width: 1000px;height: 325px;background-color: #ffffff;position: relative;-webkit-transition: all 0.2s linear;transition: all 0.2s linear;}
 .modG-2 .img{width: 325px;height: 325px;float: left;position: relative;}
-.modG-2 .img i{display: block;}
+.modG-2 .img em{display: block;text-indent: -9999em;}
 .modG-2 .info{padding: 15px;width: 645px;height: 295px;float: left;}
 .modG-2 .title{font-size: 28px;height: 30px;margin-top: 35px;}
 .modG-2 .desc{font-size: 14px;}
@@ -86,8 +86,8 @@ body{min-width:1300px;}
 
 .floor-4 .bd,.floor-4 .modG-1{height: 905px;}
 .floor-4 .bd .yao{position: absolute;width: 325px;height: 440px;right: 0;bottom: 13px;}
-.floor-5 .ad-1{display: block;width: 1000px;height: 95px;margin-bottom: 20px;}
-.floor-5 .ad-2{display: block;width: 1000px;height: 310px;margin-bottom: 50px;}
+.floor-5 .ads-1{display: block;width: 1000px;height: 95px;margin-bottom: 20px;}
+.floor-5 .ads-2{display: block;width: 1000px;height: 310px;margin-bottom: 50px;}
 
 .wrap-ft{width:100%;margin-top:80px;background-color: #F6F6F6;}
 .wrap-ft .mod-tips{height:139px;background:url(http://img11.360buyimg.com/cms/jfs/t1390/305/1355716670/16489/55f7c322/55c5ad59N3d78a2c9.jpg) no-repeat 0 0;}
