--- a/overseas/h5/css/appliance.css
+++ b/overseas/h5/css/appliance.css
@@ -443,7 +443,7 @@ a {
   padding: 0.625rem 0.625rem 0 0.625rem; }
 
 .ms-list li {
-  height: 15rem;
+  height: 17.5rem;
   overflow: hidden;
   background-color: #fff;
   margin-bottom: 0.625rem;
@@ -464,10 +464,10 @@ a {
   line-height: 1.1; }
 
 .ms-list .j-pic {
-  width: 13.125rem;
-  height: 13.125rem;
+  width: 15.625rem;
+  height: 15.625rem;
   float: left;
-  margin: 0.9375rem 1.5625rem 0 0.9375rem;
+  margin: 1.875rem 1.75rem 0 1.25rem;
   padding: 0;
   position: relative; }
 
@@ -506,8 +506,16 @@ a {
   color: #fff;
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: 1.875rem;
   font-size: 1.375rem; }
+
+.ms-list .list-ms-line {
+  position: absolute;
+  left: 18.75rem;
+  top: 17.4375rem;
+  width: 21.25rem;
+  height: 0.0625rem;
+  background-color: #f5f5f5; }
 
 .nav {
   height: 5.625rem;
