--- a/overseas/M/css/appliance.css
+++ b/overseas/M/css/appliance.css
@@ -152,7 +152,8 @@ a {
   border: 0.125rem solid #61497f;
   text-align: center;
   font-size: 1.5rem;
-  border-radius: 0.9375rem; }
+  border-radius: 0.9375rem;
+  background-color: #fff; }
 
 .goods-list .discount-text {
   font-size: 1.125rem;
@@ -162,6 +163,10 @@ a {
   line-height: 1.5rem;
   margin: 0.3125rem 0 0.8125rem 0; }
 
+.goods-list .price {
+  margin-bottom: 1.0625rem;
+  margin-top: 0.3125rem; }
+
 .goods-list .j-jd-price {
   font-size: 1.75rem;
   color: #c51c2a;
@@ -169,10 +174,8 @@ a {
   max-width: 7.25rem;
   overflow: hidden;
   margin-right: 0.3125rem;
-  margin-top: 0.3125rem;
   height: 1.875rem;
-  line-height: 1.875rem;
-  margin-bottom: 1.0625rem; }
+  line-height: 1.875rem; }
 
 .goods-list .j-sku-price {
   max-width: 5.25rem;
@@ -216,7 +219,7 @@ a {
 
 .floor-title .tit-extra {
   color: #999999;
-  font-size: 0.5rem;
+  font-size: 1.5rem;
   font-weight: normal; }
 
 .floor-title .tit-extra em {
@@ -403,7 +406,8 @@ a {
   color: #3b3b3b;
   font-size: 1.75rem;
   text-align: center;
-  height: 5rem; }
+  height: 5rem;
+  line-height: 5rem; }
 
 .keyword-list {
   padding-left: 1.25rem; }
@@ -443,7 +447,7 @@ a {
   padding: 0.625rem 0.625rem 0 0.625rem; }
 
 .ms-list li {
-  height: 15rem;
+  height: 17.5rem;
   overflow: hidden;
   background-color: #fff;
   margin-bottom: 0.625rem;
@@ -464,10 +468,10 @@ a {
   line-height: 1.1; }
 
 .ms-list .j-pic {
-  width: 13.125rem;
-  height: 13.125rem;
+  width: 15.625rem;
+  height: 15.625rem;
   float: left;
-  margin: 0.9375rem 1.5625rem 0 0.9375rem;
+  margin: 1.875rem 1.75rem 0 1.25rem;
   padding: 0;
   position: relative; }
 
@@ -506,8 +510,16 @@ a {
   color: #fff;
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: 1.875rem;
   font-size: 1.375rem; }
+
+.ms-list .list-ms-line {
+  position: absolute;
+  left: 18.75rem;
+  top: 17.4375rem;
+  width: 21.25rem;
+  height: 0.0625rem;
+  background-color: #f5f5f5; }
 
 .nav {
   height: 5.625rem;
