--- a/overseas/h5/css/appliance.css
+++ b/overseas/h5/css/appliance.css
@@ -152,7 +152,8 @@ a {
   border: 0.125rem solid #61497f;
   text-align: center;
   font-size: 1.5rem;
-  border-radius: 0.9375rem; }
+  border-radius: 0.9375rem;
+  background-color: #fff; }
 
 .goods-list .discount-text {
   font-size: 1.125rem;
@@ -162,6 +163,10 @@ a {
   line-height: 1.5rem;
   margin: 0.3125rem 0 0.8125rem 0; }
 
+.goods-list .price {
+  margin-bottom: 1.0625rem;
+  margin-top: 0.3125rem; }
+
 .goods-list .j-jd-price {
   font-size: 1.75rem;
   color: #c51c2a;
@@ -169,10 +174,8 @@ a {
   max-width: 7.25rem;
   overflow: hidden;
   margin-right: 0.3125rem;
-  margin-top: 0.3125rem;
   height: 1.875rem;
-  line-height: 1.875rem;
-  margin-bottom: 1.0625rem; }
+  line-height: 1.875rem; }
 
 .goods-list .j-sku-price {
   max-width: 5.25rem;
@@ -216,7 +219,7 @@ a {
 
 .floor-title .tit-extra {
   color: #999999;
-  font-size: 0.5rem;
+  font-size: 1.5rem;
   font-weight: normal; }
 
 .floor-title .tit-extra em {
@@ -403,7 +406,8 @@ a {
   color: #3b3b3b;
   font-size: 1.75rem;
   text-align: center;
-  height: 5rem; }
+  height: 5rem;
+  line-height: 5rem; }
 
 .keyword-list {
   padding-left: 1.25rem; }
