--- a/overseas/media/style/css/421.css
+++ b/overseas/media/style/css/421.css
@@ -204,7 +204,7 @@ body {
 .goods-list-2 {
   margin-bottom: 1.375rem; }
 
-.floor-title {
+.floor-title, .floor-title img {
   width: 100%; }
 
 .goodsList-block .floor-bd {
