--- a/tongtianta/css/1001.css
+++ b/tongtianta/css/1001.css
@@ -1,4 +1,11 @@
 @charset "UTF-8";
+/* bgColor */
+body {
+  background-color: #66eda8 !important; }
+
+.wrap-bg-1 {
+  background-color: #b4ee66 !important; }
+
 /* wrapper-loading */
 .wrapper-loading {
   position: absolute;
@@ -116,7 +123,10 @@
   opacity: 0;
   transition: opacity .1s .2s;
   -webkit-transition: opacity .1s  .2s;
-  -o-transition: opacity .1s  .2s; }
+  -o-transition: opacity .1s  .2s;
+  width: 100%;
+  overflow: hidden;
+  position: relative; }
 
 .wrap-banner img {
   display: block; }
@@ -179,7 +189,6 @@
   top: 6.10063rem;
   left: 0;
   width: 100%;
-  overflow: hidden;
   z-index: 27; }
 
 .banner-overflow-wrap .banner-balloon-div {
@@ -291,7 +300,8 @@
 
 .banner-status-wrap .banner-ani-rope .banner-ani-rope-yjs {
   width: 4.80956rem;
-  height: 2.89425rem; }
+  height: 2.89425rem;
+  top: 2.08556rem; }
 
 .banner-ani-joy {
   top: -2.11394rem;
@@ -300,14 +310,20 @@
   width: 4.72444rem;
   z-index: 28; }
 
+.banner-ani-btn-tip {
+  width: 5.71756rem;
+  height: 2.00044rem;
+  top: 0.49656rem;
+  left: 3.64619rem;
+  left: 3.90156rem; }
+
 .banner-ani-btn {
   width: 9.88869rem;
   height: 2.93681rem;
   top: 2.58213rem;
   left: 3.12125rem;
   left: 3.31988rem;
-  overflow: hidden;
-  z-index: 29; }
+  overflow: hidden; }
 
 .banner-ani-btn-text {
   width: 5.24938rem;
@@ -326,11 +342,11 @@
   opacity: 0; }
 
 /* banner-status-active、banner-status-wks、banner-status-yjs */
-.wrap-banner .banner-status-yjs .banner-ani-rope-yjs {
-  width: 4.80956rem;
-  height: 2.89425rem;
-  top: 2.08556rem; }
-
+/*.wrap-banner .banner-status-yjs .banner-ani-rope-yjs{
+  width: 339px/$ppr;
+  height: 204px/$ppr;
+  top: 147px/$ppr;
+}*/
 .banner-status-active .banner-ani-btn-text .banner-ani-btn-text-daqi, .banner-status-active .banner-ani-rope .banner-ani-rope-active, .banner-status-active .banner-ani-btn .banner-ani-btn-active, .banner-status-wks .banner-ani-rope .banner-ani-rope-active, .banner-status-wks .banner-ani-btn .banner-ani-btn-active {
   display: block; }
 
@@ -356,8 +372,11 @@
   opacity: 1;*/ }
 
 /* banner-status-wrap-show */
-.banner-status-wrap-show .banner-ani {
+.banner-status-wrap-show .banner-ani, .banner-status-wrap-show.banner-status-active .banner-ani-btn-tip {
   opacity: 1; }
+
+.banner-status-wrap-show .banner-ani-btn-tip {
+  opacity: 0; }
 
 .banner-status-wrap-show .banner-ani-rope-active {
   transition: opacity .2s .3s;
@@ -374,5 +393,190 @@
 
 .banner-status-wrap-show .banner-ani-gas {
   opacity: 0; }
+
+/* wrapper-success */
+.wrapper-success {
+  position: absolute;
+  width: 12.39988rem;
+  height: 11.61956rem;
+  top: 5.64663rem;
+  left: 1.80181rem;
+  z-index: 35;
+  display: none; }
+
+.wrap-tips-info {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center; }
+
+.tip-info-brand, .banner-overflow-wrap .banner-balloon .got-info-brand {
+  margin: 0.35469rem auto 0.09931rem;
+  display: block;
+  width: 4.767rem;
+  height: 2.56794rem;
+  position: relative; }
+
+.tip-info-money {
+  left: 5.57569rem;
+  top: 5.81688rem;
+  position: absolute;
+  font-size: 1.19175rem;
+  font-style: italic; }
+
+.tip-info-limit {
+  position: absolute;
+  left: 4.27044rem;
+  top: 7.20725rem;
+  font-size: 0.51075rem; }
+
+.suc-info-text-limit {
+  left: 0;
+  top: 8.2855rem;
+  position: absolute;
+  font-size: 0.454rem;
+  width: 100%;
+  text-align: center; }
+
+.suc-btn {
+  position: absolute;
+  width: 30%;
+  height: 9.8%;
+  top: 79.73%;
+  left: 17.39%; }
+
+.suc-btn-share {
+  left: 53.43%; }
+
+#closeBtn2 {
+  width: 6.86%;
+  height: 6.86%;
+  position: absolute;
+  left: 80.77%;
+  top: 8.89%; }
+
+/* wrapper-got-coupon */
+/*.wrapper-got-coupon{
+  position: absolute;
+  left: 256px/$ppr;
+  left: 275px/$ppr;
+  left: -44px/$ppr;
+  top: -25px/$ppr;
+  width: 700px/$ppr;
+  height: 1000px/$ppr;
+  display: none;
+}
+
+.banner-overflow-wrap .wrapper-got-coupon img{
+  opacity: 1;
+}
+
+.wrap-got-info{
+  width: 594px/$ppr;
+  margin-left: 18px/$ppr;
+  margin-top: 25px/$ppr;
+}
+
+.got-info-money{
+  left: 232px/$ppr;
+  top: 230px/$ppr;
+}
+
+.got-info-limit{
+  left: 143px/$ppr;
+  top: 324px/$ppr;
+}
+
+.wrapper-got .wrapper-got-coupon{
+  display: block;
+}
+
+.wrapper-got .balloon-ing .balloon-img-active,.wrapper-got .balloon-ing .balloon-text,.wrapper-got .banner-status-active.banner-status-wrap{
+  opacity: 0;
+}*/
+/* tipsPressError */
+#wrapperError {
+  width: 6.39856rem;
+  height: 3.66038rem;
+  top: 8.27131rem;
+  position: absolute;
+  left: 50%;
+  margin-left: -3.19219rem;
+  display: none;
+  z-index: 34;
+  background-image: url(http://img12.360buyimg.com/cms/jfs/t3058/287/2745373566/48466/15ff6fe5/57e50c56N1eb865a2.png);
+  background-size: cover; }
+
+.wrapper-error-text {
+  font-size: 0.59588rem;
+  color: #000;
+  text-align: center;
+  margin-top: 0.70938rem; }
+
+/* balloon-active-boom */
+.balloon-img-boom {
+  width: 11.9175rem;
+  height: 11.13719rem;
+  left: -2.22744rem;
+  top: -0.07094rem;
+  position: absolute;
+  opacity: 0;
+  background-size: cover;
+  background-image: url(http://img13.360buyimg.com/cms/jfs/t3292/137/2497308441/125056/7232f6d1/57e379e9N74a7473f.png);
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  transform-origin: 50% 50%; }
+
+.banner-overflow-wrap .balloon-active-boom .balloon-img-active, .banner-overflow-wrap .balloon-active-boom .balloon-img-brand, .banner-overflow-wrap .balloon-active-boom .balloon-text {
+  animation-fill-mode: forwards;
+  animation: balloonScale 4s linear; }
+
+.balloon-active-boom .balloon-img-boom {
+  animation-fill-mode: forwards;
+  animation: balloonBoom 0.4s 3.2s steps(5); }
+
+.banner-overflow-wrap .balloon-active-boom {
+  transform: scale(1.1) translateY(-10%);
+  transition: transform 3.2s linear; }
+
+.banner-overflow-wrap .balloon-active-boom-pause .balloon-img-active, .banner-overflow-wrap .balloon-active-boom-pause .balloon-img-brand, .banner-overflow-wrap .balloon-active-boom-pause .balloon-text {
+  animation-fill-mode: forwards;
+  animation: balloonScalePause .5s; }
+
+.banner-overflow-wrap .balloon-active-boom-pause {
+  transform: scale(1) translateY(0);
+  transition: transform .5s linear; }
+
+@keyframes balloonScale {
+  0% {
+    transform: scale(1);
+    opacity: 1; }
+  75% {
+    transform: scale(1.1);
+    opacity: 0.8; }
+  90%,100% {
+    transform: scale(1.2);
+    opacity: 0; } }
+@keyframes balloonBoom {
+  0% {
+    opacity: 0.6; }
+  100% {
+    background-position: 0 -34.48981rem;
+    opacity: 0; } }
+/* wrap-flr8:生活旅行处理 */
+.wrap-flr8 .z-three a {
+  width: 100%; }
+
+.wrap-flr8 .z-three .goods-name, .wrap-flr8 .z-three .goods-price {
+  display: none; }
+
+/* wrapper-no-chance */
+.wrapper-no-chance .banner-status-active .banner-ani-rope .banner-ani-rope-active, .wrapper-no-chance .banner-ani-btn-text {
+  display: none; }
+
+.wrapper-no-chance .banner-status-active .banner-ani-rope .banner-ani-rope-yjs {
+  display: block; }
 
 /*# sourceMappingURL=1001.css.map */
